raw_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-service
spec:
  selector:
    app: demo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
